2010-03-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move "expansion + output" to b-kwxout.[hc]; use exp context.

	* b-kwxout.h: New file.
	* b-kwxout.c: New file.
	* Makefile.am (libparts_a_SOURCES): Add b-kwxout.h, b-kwxout.c.
	* base.h (expandline): Delete func decl.
	* ci.c: #include "b-kwxout.h".
	(xpandfile): Update call to `expandline'.
	* rcsedit.c: #include "b-kwxout.h".
	(finisheditline, finishedit, copylines)
	(xpandstring, editstring): Update call to `expandline'.

2010-03-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use #define for `ciklog' et al.

	* base.h (ciklog): Convert from var decl to #define.
	(ciklog_len): New #define.
	(ciklogsize): Delete #define.
	* ci.c (getlogmsg): Use `ciklog_len'.
	* rcsedit.c (ciklog): Delete var.
	(keyreplace): Use `ciklog_len'.
	* rcsfcmp.c (rcsfcmp): Use `ciklog_len'.

2010-03-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use #define for RCS file keywords.

	* base.h (KS): New macro.
	(Kaccess): Convert from var decl to #define; use `KS'.
	(Kauthor, Kbranch, Kcomment, Kdate, Kdesc, Kexpand, Khead, Klocks)
	(Klog, Knext, Kstate, Kstrict, Ksymbols, Ktext): Likewise.
	* rcssyn.c (Kaccess): Delete var.
	(Kauthor, Kbranch, Kcomment, Kdate, Kdesc, Kexpand, Khead, Klocks)
	(Klog, Knext, Kstate, Kstrict, Ksymbols, Ktext): Likewise.
	(Kbranches): Rename from `K_branches'; convert from var to #define.
	[COMPAT2] (Ksuffix): Convert from var to #define.
	(getdelta): Use `Kbranches'.

2010-03-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move some constant data from rcsutil.c to b-anchor.c.

	* b-anchor.c (prog_diff, prog_diff3, diff_flags, equal_line):
	New, moved without change from...
	* rcsutil.c (prog_diff, prog_diff3, diff_flags, equal_line):
	...here.

2010-03-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Overhaul "keyword-substitution mode name" recognition.

	* b-anchor.c (kwsub_pool): New static `uint8_t' array.
	(recognize_kwsub, kwsub_string): New funcs.
	* base.h (recognize_kwsub): New func decl.